syntax = "proto3";

package go.micro.srv.slack;

import "github.com/micro/slack-srv/proto/common.proto";

service Channels {
	rpc History(HistoryRequest) returns (HistoryResponse) {}
	rpc Info(InfoRequest) returns (InfoResponse) {}
	rpc List(ListRequest) returns (ListResponse) {}
	rpc Mark(MarkRequest) returns (MarkResponse) {}
	rpc SetPurpose(SetPurposeRequest) returns (SetPurposeResponse) {}
	rpc SetTopic(SetTopicRequest) returns (SetTopicResponse) {}
}

message Channel {
	string id = 1;
	string name = 2;
	int64 created = 3;
	string creator = 4;
	bool is_archived = 5;
	bool is_member = 6;
	bool is_general = 7;
	int64 num_members = 8;
	Topic topic = 9;
	Purpose purpose = 10;	
	repeated string members = 11;
	string latest_read = 12;
	Message latest = 13;
	int64 unread_count = 14;
	int64 unread_count_display = 15;
}

message Topic {
	string value = 1;
	string creator = 2;
	int64 last_set = 3;
}

message Purpose {
	string value = 1;
	string creator = 2;
	int64 last_set = 3;
}

message ListRequest {
	int64 exclude_archived = 1;
}

message ListResponse {
	bool ok = 1;
	string error = 2;
	repeated Channel channels = 3;
}

message HistoryRequest {
	string channel = 1;
	double latest = 2;
	double oldest = 3;
	int64 inclusive = 4;
	int64 count = 5;
	int64 unreads = 6;
}

message HistoryResponse {
	bool ok = 1;
	string error = 2;
	string latest = 3;
	repeated Message messages = 4;
	bool has_more = 5;
}

message InfoRequest {
	string channel = 1;
}

message InfoResponse {
	bool ok = 1;
	string error = 2;
	Channel channel = 3;
}

message MarkRequest {
	string channel = 1;
	double ts = 2;
}

message MarkResponse {
	bool ok = 1;
	string error = 2;
}

message SetPurposeRequest {
	string channel = 1;
	string purpose = 2;
}

message SetPurposeResponse {
	bool ok = 1;
	string error = 2;
	string purpose = 3;
}

message SetTopicRequest {
	string channel = 1;
	string topic = 2;
}

message SetTopicResponse {
	bool ok = 1;
	string error = 2;
	string topic = 3;
}
